--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dan Aksenov</title>
+		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -22,6 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
+        		<li><a href="mailto:drmfd @yandex.ru">email</a></li>
         		<li><a href="https://github.com/dan-aksenov">github.com/dan-aksenov</a></li>
 			</ul>
 		</footer>
