--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ footer {
 
 ul.posts {
     margin: 20px auto 40px;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 1.5em;
 }
 
