--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 body {
     margin: 60px auto;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Consolas', 'Liberation Mono', 'Courier', 'monospace';
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Consolas', 'Liberation Mono', 'Courier', 'monospace';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -22,11 +22,11 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Consolas', 'Liberation Mono', 'Courier', 'monospace';
 }
 p {
     font-size: 1.5em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Consolas', 'Liberation Mono', 'Courier', 'monospace';
     line-height: 1.4em;
     color: #333;
 }
